--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "node-sass": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17",
+    "redux-promise": "^0.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
